# src/modules/users/UserController.ts
@@ -1,13 +1,15 @@
 import { Body, Controller, Get, Path, Post, Queries, Res, Route, Security, Tags, Request } from 'tsoa'
 import { UserHandler } from './handler/UserHandler'
-import { User } from './model/User'
+import { User } from './entity/User'
 import { UserFilter } from './filter/UserFilter'
 import { TsoaResponse } from '@tsoa/runtime'
 import express from 'express'
+import {plainToInstance} from "class-transformer";
+import {PaginatedTable} from "../common/PaginatedTable";
 
 @Route('users')
 @Tags('Users')
-export class UserController extends Controller{
+export class UserController extends Controller {
 
 	private readonly handler = new UserHandler()
 
@@ -22,24 +24,24 @@ export class UserController extends Controller{
 	@Security('jwt', ['mutate-user'])
 	@Post('/new')
 	async saveUser(
-		@Body() user: User
+		@Body() user: Pick<User, 'id' | 'name' | 'email' | 'password' | 'deleted'>
 	): Promise<User> {
-		return await this.handler.saveUser(user)
+		return await this.handler.saveUser(plainToInstance(User, user))
 	}
 
 	@Security('jwt', ['get-user'])
 	@Post('')
 	async userList(
 		@Body() filter: UserFilter
-	): Promise<User[] | User> {
+	): Promise<PaginatedTable<User>> {
 		return await this.handler.userList(filter)
 	}
 
 	@Post('/reg')
 	async userRegistration(
-		@Body() user: User
+		@Body() user: Pick<User, 'name' | 'email' | 'password'>
 	): Promise<User> {
-		return await this.handler.userRegistration(user)
+		return await this.handler.userRegistration(plainToInstance(User, user))
 	}
 
 	@Post('/login')
